E1-1236: added mixin for elipsis and fixed for centeraligned smile points

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/product-grid-text-section.scss
@@ -3129,12 +3129,11 @@
       }
 
       span {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
         width: 100%;
+        @include ellipsis();
         .center {
           text-align: center;
+           @include ellipsis();
         }
       }
     }
