--- a/ui.frontend/src/main/webpack/global/styles/utils/_mixins.scss
+++ b/ui.frontend/src/main/webpack/global/styles/utils/_mixins.scss
@@ -341,3 +341,9 @@ $screen-xxl-max: 1201px;
 @mixin transition($duration:0.3s, $ease:ease-in-out) {
   transition: all $duration $ease;
 }
+
+@mixin ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
